## Process this file with automake to produce Makefile.in

## headers
noinst_HEADERS = \
	abysmal-stack.hh \
	clonable.hh \
	debug.hh \
	default-operator.hh \
	distribution.hh \
	linalg.hh \
	logarithmetic.hh \
	named-ptr.hh \
	observable.hh \
	permutation.hh \
	polynomial.hh \
	progress.hh \
	random.hh \
	statistics.hh \
	strtools.hh \
	terminal-codes.hh \
	thread-pool.hh
