## Process this file with automake to produce Makefile.in

AM_CPPFLAGS = -I$(top_srcdir)
AM_CXXFLAGS = $(CXXFLAGS_NORTTI)

noinst_PROGRAMS = probability-test summation-test

probability_test_SOURCES = probability-test.cc
summation_test_SOURCES = summation-test.cc

## headers
noinst_HEADERS = \
	abysmal-stack.hh \
	boost-random-shuffle.hh \
	clonable.hh \
	debug.hh \
	default-operator.hh \
	histogram.hh \
	linalg.hh \
	logarithmetic.hh \
	multinomial-beta.hh \
	named-ptr.hh \
	observable.hh \
	permutation.hh \
	polynomial.hh \
	probability.hh \
	progress.hh \
	random.hh \
	statistics.hh \
	strtools.hh \
	summation.hh \
	terminal-codes.hh \
	thread-pool.hh
