## Process this file with automake to produce Makefile.in

## set python package name
pkgpythondir = $(pyexecdir)/tfbayes/weblogo

## compile python files
pkgpython_PYTHON = __init__.py color.py colorscheme.py

## other data
pkgpython_DATA = template.eps

## clean python files
clean-local:
	$(RM) *.pyc
